# bytebeater

./: CMakeLists.txt  LICENSE.md  README.md
include/: defs.h
src/: bytebeater.c  defs.h
